--- a/app/src/main/res/layout/fragment_choose.xml
+++ b/app/src/main/res/layout/fragment_choose.xml
@@ -10,7 +10,7 @@
     <androidx.appcompat.widget.AppCompatImageView
         android:layout_width="96dp"
         android:layout_height="96dp"
-        android:src="@mipmap/ic_launcher"
+        android:src="@mipmap/ic_launcher_foreground"
         android:layout_margin="24dp"
         android:id="@+id/image"
         app:layout_constraintTop_toTopOf="parent"
@@ -20,7 +20,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="今のお気に入り、気分はどの曲？"
-        android:textSize="22sp"
+        android:textSize="18sp"
         android:layout_marginTop="24dp"
         android:fontFamily="@font/font"
         app:layout_constraintStart_toStartOf="parent"
@@ -50,6 +50,7 @@
             android:backgroundTint="@color/white"
             android:ems="15"
             android:hint="曲を調べよう"
+            android:fontFamily="@font/font"
             android:inputType="text"
             android:imeOptions="actionDone"/>
     </com.google.android.material.textfield.TextInputLayout>
